@@ -1,5 +1,5 @@
-56d6f433f98010839f7285e5885b27b4 *ChangeLog
-9816c0fb7da7c476c109d16072734bfc *DESCRIPTION
+1234d20d02c87247b86692ba71e783ee *ChangeLog
+1cb13b033f93a64d83c79bcc764e6082 *DESCRIPTION
 d18dd7daefa9edab003ac2cb1c82f3df *NAMESPACE
 833f99ba3aa1aa4d7c4d777778e74e58 *R/RcppExports.R
 84de62df0f10b46ee688d135f322abfb *R/abn-infotheo.R
@@ -29,8 +29,8 @@ ebf9ffebc35ef6e0aa0e98bd06f20eb5 *R/search_hillclimber.R
 4bab0e7e9b4f5f59ca44c251f26a23a1 *README.md
 1787a3151b91db2bac1a2a33920c8173 *build/vignette.rds
 8ea0326a4c940e9db9e2915e8aa46dc1 *cleanup
-c2b084413ab91bb477a7ede17f87f7fd *configure
-de46b5c31548fc2c8c63319f6136697e *configure.ac
+774bbf6d5f02cabc764b162ce9daa8e3 *configure
+809817472dd7b1fbe1c251e12a31f755 *configure.ac
 f498242ff4a74badd6737a403ccfb288 *data/FCV.RData
 7da82ced816b8ea67eb5ab0485aacf60 *data/adg.RData
 82a22fbc5407a5eccdb51eeb23b664b8 *data/ex0data.RData
@@ -245,21 +245,21 @@ f5bdd9acac75647dc54268712014bc05 *tests/testthat/_snaps/tographviz/graph_group.d
 3fb633ef7b2de9617955e61fc71ddb5d *tests/testthat/test-abn-internal.R
 1156435c014d634de6fe4e3d3d47679d *tests/testthat/test-abn-methods.R
 2b567ead3dd35e89f78b22493af40c15 *tests/testthat/test-abn-toolbox.R
-f532900c88348c6ed7e7a056ae56cb47 *tests/testthat/test-build_score_cache.R
+1baed1f7f1c962a0c80a355154b824db *tests/testthat/test-build_score_cache.R
 428fcc6826bec7bf1e9c67add27ee148 *tests/testthat/test-build_score_cache_bayes.R
 666c8f2ef6b759abc77bd20195352cc6 *tests/testthat/test-build_score_cache_mle.R
 5029860e243c061b3df3684f63a8e36f *tests/testthat/test-calc_node_inla_glm.R
 57fc66ae1821f2448a26eb7d361e5218 *tests/testthat/test-calc_node_inla_glmm.R
-1f94dcb801564cd525e7ff8132d81dad *tests/testthat/test-fitabn.R
+9dd1d7cc84e565d8e75307c12fe9e7df *tests/testthat/test-fitabn.R
 35b33362c3bbdaaf1ebce3978655bc6e *tests/testthat/test-fitabn_bayes.R
 24d1b90f6345beea82a15d74969e250d *tests/testthat/test-fitabn_mle.R
 e351c8ee0adc0bc1fed87399736baf9b *tests/testthat/test-getmarginals.R
 6170fff86d9f3de985ac64d9a5397b99 *tests/testthat/test-link-strength.R
 bf7ea1c3f3058e7d8181ffe180e17db2 *tests/testthat/test-markov-blanket.R
-7cfb33a3306adc65735e961484941d76 *tests/testthat/test-mostprobable.R
+509a2164a336d540ab32a30f7869b97e *tests/testthat/test-mostprobable.R
 1b27883cabaa5ba5acb82f9acc30692e *tests/testthat/test-plot-abn.R
 1e1ed9522906cc09d1c336bc713a3cb1 *tests/testthat/test-search_heuristic.R
-f7001a1fa393bc87b27c00a1de3ec97d *tests/testthat/test-search_hillclimber.R
+1dbdedd386e63a950d91749a0c16065c *tests/testthat/test-search_hillclimber.R
 d73387508c40ab0a0c8746f5ac086cb7 *tests/testthat/test-simulateabn.R
 8e886461d9e31c3b28df138034cc3929 *tests/testthat/test-tographviz.R
 b07e4b501dd695016da54d164a52f3c2 *tests/testthat/test-validation.R
